# master-backend

./: +  .env  .gitignore  Cargo.toml  Dockerfile  dev-docker-compose.yml  docker-compose.yml
assets/: elements.json
certificates/: cert.pem  key.pem
src/: main.rs
src/database/: config.rs  document.rs  validator.rs
src/database/collections/: active_member.rs  board.rs  client.rs  element.rs  element_type.rs  user.rs
src/services/: rest.rs
src/services/rest/: server.rs
src/services/rest/endpoints/: active_member.rs  board.rs  client.rs  element.rs  element_type.rs  ping.rs  user.rs
src/services/rest/payloads/: active_member.rs  board.rs  client.rs  element.rs  element_type.rs  user.rs
src/services/webtransport/: server.rs
src/services/webtransport/context/: active_member.rs  base.rs  board.rs  client.rs  element.rs
src/services/webtransport/messages/: active_member.rs  base.rs  board.rs  category.rs  client.rs  element.rs  init.rs  server.rs
src/utils/: check_request_body.rs  element_types.rs  generate_certificate.rs  logging.rs
