[package]
name = "master-backend"
version = "0.1.0"
edition = "2021"
authors = ["Noah Bauer <noah.bauer@hs-worms.de>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"
axum = "0.7.5"
chrono = "0.4.35"
tower-http = { version = "0.5.2", features = [ "trace", "cors" ]}
simple-error = "0.3.0"
tokio = { version = "1.36.0", features = ["full"] }
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.81"
log = "0.4.21"
mongodb = { version = "2.8.2" , features = [ "zstd-compression", "snappy-compression", "zlib-compression" ]}
bson = { version = "2.10.0", features = ["serde_with", "default", "uuid-1"] }
futures = "0.3.30"
wtransport = "0.1.13"
rxrust = "1.0.0-beta.8"
